--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,10 +23,33 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: "4.5.1"
+          use-public-rspm: true
 
-      - name: Install R dependencies
-        run: |
-          Rscript resources/install_packages.R
+      - name: Install R dependencies (cached)
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 1
+          packages: |
+            any::tidyverse
+            any::dplyr
+            any::tidyr
+            any::readr
+            any::ggplot2
+            any::plotly
+            any::survival
+            any::flexsurv
+            any::WeibullR
+            any::reliability
+            any::knitr
+            any::kableExtra
+            any::DT
+            any::broom
+            any::caret
+            any::randomForest
+            any::prophet
+            any::anomalize
+            any::simmer
+            any::MASS
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
