--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,28 +28,36 @@ jobs:
       - name: Install R dependencies (cached)
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          cache-version: 1
+          cache-version: 2
           packages: |
             any::tidyverse
-            any::dplyr
-            any::tidyr
-            any::readr
-            any::ggplot2
-            any::plotly
             any::survival
             any::flexsurv
             any::WeibullR
-            any::reliability
+            any::survminer
+            any::fitdistrplus
             any::knitr
             any::kableExtra
             any::DT
-            any::broom
             any::caret
             any::randomForest
             any::prophet
             any::anomalize
             any::simmer
             any::MASS
+            any::DiagrammeR
+            any::here
+            any::lubridate
+            any::zoo
+            any::naniar
+            any::DBI
+            any::RSQLite
+            any::pins
+            any::targets
+            any::httr
+            any::plotly
+            any::scales
+            any::jsonlite
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
