--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,18 +4,41 @@
     "reditorsupport.r",
     "rdebugger.r-debugger",
     "yzhang.markdown-all-in-one",
-    "davidanson.vscode-markdownlint"
+    "davidanson.vscode-markdownlint",
+    "mechatroner.rainbow-csv",
+    "github.copilot",
+    "github.copilot-chat"
   ],
   "unwantedRecommendations": [
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "ms-python.debugpy",
+    "ms-python.vscode-python-envs",
     "ms-toolsai.jupyter",
-    "ms-azuretools.vscode-docker",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "ms-vscode.powershell",
-    "oracle.oracledevtools",
-    "oracle.mysql",
-    "ms-vscode.vscode-typescript-next"
+    "stylelint.vscode-stylelint",
+    "jacqueslucke.blender-development",
+    "ms-vscode.cpptools",
+    "ms-azure-load-testing.microsoft-testing",
+    "ms-azuretools.vscode-azureappservice",
+    "ms-azuretools.vscode-azurecontainerapps",
+    "ms-azuretools.vscode-azurefunctions",
+    "ms-azuretools.vscode-azurestaticwebapps",
+    "ms-azuretools.vscode-azurestorage",
+    "ms-azuretools.vscode-azurevirtualmachines",
+    "ms-azuretools.vscode-cosmosdb",
+    "ms-vscode.vscode-node-azure-pack",
+    "vscjava.migrate-java-to-azure",
+    "vscjava.vscode-java-upgrade",
+    "ms-mssql.mssql",
+    "ms-mssql.data-workspace-vscode",
+    "ms-mssql.sql-bindings-vscode",
+    "ms-mssql.sql-database-projects-vscode",
+    "mtxr.sqltools",
+    "qwtel.sqlite-viewer",
+    "ms-windows-ai-studio.windows-ai-studio",
+    "teamsdevapp.vscode-ai-foundry",
+    "davidrsch.shinyframeworks"
   ]
 }
