--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,7 +41,9 @@ format:
     css: styles.css
     code-fold: true
     code-tools: true
-    toc: false
+    toc: true
+    toc-location: left
+    toc-depth: 3
     number-sections: true
     link-external-newwindow: true
   pdf:
