--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ format:
     code-fold: true
     code-tools: true
     toc: true
-    toc-location: left
+    toc-location: right
     toc-depth: 3
     number-sections: true
     link-external-newwindow: true
