Título: 'Confiabilidade e Manutenção' + subtítulo 'Aplicações em R' em linha separada

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,8 @@ project:
   output-dir: docs
 
 book:
-  title: "Confiabilidade e Manutenção: Aplicações em R"
+  title: "Confiabilidade e Manutenção"
+  subtitle: "Aplicações em R"
   author:
     - name: "Rafael da Silva Fernandes"
       affiliation: "Universidade Federal de Itajubá"
