feat: reorganização completa do livro
- Estrutura reorganizada com 15 capítulos em 4 partes
- Removido conteúdo obsoleto (intro.qmd)
- Atualizado summary.qmd com considerações finais
- Criados 3 datasets de exemplo em resources/data/
- Adicionado script de funções auxiliares R
- Configurado GitHub Actions para deploy automático
- Ajustado rodapé para aparecer no final da página
- Removidos riscos indesejados no TOC
- Ocultados capítulos 4-15 temporariamente
- Documentação atualizada (README, CHANGELOG, PROGRESS)

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,35 @@
-# ===== Quarto Book =====
-# Diretório de saída do Quarto Book
-/_book/
+# Quarto
 /.quarto/
+/_site/
+/_book/
+/docs/
+*.html
 
-# Cache de renderização
-*_cache/
-*_files/
-*_freeze/
-
-# Arquivos temporários do Quarto
-.quarto
-*.quarto_ipynb
-
-# ===== R =====
-.Rproj.user
+# R
 .Rhistory
 .RData
-.Ruserdata
+.Rproj.user
+.Renviron
 *.Rproj
 
-# ===== Sistema =====
+# Cache
+*_cache/
+*_files/
+/_freeze/
+
+# OS
 .DS_Store
 Thumbs.db
 *~
-*.bak
-*.tmp
 
-# ===== Editor =====
+# IDE
+.vscode/
 .idea/
-*.swp
-*.swo
 
-# ===== Logs =====
+# Logs
 *.log
+
+# Temporary
+tmp/
+temp/
+*.tmp
