--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,76 +1,73 @@
-name: Render and Deploy Quarto Book
+name: Render and Publish Book
 
 on:
   push:
     branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 concurrency:
-  group: quarto-book-${{ github.ref }}
-  cancel-in-progress: true
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
+    
     steps:
-      - name: Check out repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up R
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: 1.6.39
+
+      - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: "4.5.1"
+          r-version: '4.5.1'
           use-public-rspm: true
 
-      - name: Install R dependencies (cached)
+      - name: Install R dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          cache-version: 2
           packages: |
             any::tidyverse
             any::survival
             any::flexsurv
-            any::WeibullR
+            any::ggplot2
+            any::knitr
+            any::rmarkdown
+            any::plotly
+            any::patchwork
             any::survminer
             any::fitdistrplus
-            any::knitr
             any::kableExtra
             any::DT
-            any::caret
-            any::randomForest
-            any::prophet
-            any::anomalize
-            any::simmer
-            any::MASS
-            any::DiagrammeR
-            any::here
-            any::lubridate
-            any::zoo
-            any::naniar
-            any::DBI
-            any::RSQLite
-            any::pins
-            any::targets
-            any::httr
-            any::plotly
-            any::scales
-            any::jsonlite
+            any::broom
 
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
+      - name: Render Book
+        run: quarto render
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          version: "1.6.39"
+          path: docs
 
-      - name: Render Quarto Book
-        run: |
-          quarto render
-
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
+    steps:
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
-          force_orphan: true
+        id: deployment
+        uses: actions/deploy-pages@v4
