--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ book:
   sidebar:
     style: docked
     collapse-level: 3
-    search: false
+    search: true
 
   chapters:
     - index.qmd
@@ -20,32 +20,25 @@ book:
     - requirements.qmd
     - setup.qmd
 
-    - part: "Contexto e Aplicação em Mineração"
+    - part: "Medidas de Performance na Mineração"
       chapters:
-        - chapters/01-introducao.qmd
-        - chapters/02-performance-mineracao.qmd
-        - chapters/03-fatores-moderadores.qmd
+        - chapters/part1-01-ciclo-carregamento-transporte.qmd
+        - chapters/part1-02-analise-dados-recorrentes.qmd
+        - chapters/part1-03-aplicacao-pdca.qmd
+        - chapters/part1-04-resumo.qmd
+        - chapters/part1-05-exercicios.qmd
 
-    # - part: "Fundamentos de Confiabilidade"
-    #   chapters:
-    #     - chapters/04-fundamentos.qmd
-    #     - chapters/05-distribuicoes.qmd
-    #     - chapters/06-estimacao.qmd
-    #     - chapters/07-analise-falhas.qmd
-    #     - chapters/08-weibull.qmd
-    #     - chapters/09-sobrevivencia.qmd
+    - part: "Fundamento da Gestão da Manutenção"
+      chapters:
+        - chapters/part2-09-o-que-e-manutencao.qmd
+        - chapters/part2-10-o-que-e-gestao-manutencao.qmd
+        - chapters/part2-11-planejamento-controle-manutencao.qmd
+        - chapters/part2-12-placeholder.qmd
 
-    # - part: "Estratégias de Manutenção"
-    #   chapters:
-    #     - chapters/10-manutencao-preventiva.qmd
-    #     - chapters/11-manutencao-preditiva.qmd
-
-    # - part: "Tópicos Avançados"
-    #   chapters:
-    #     - chapters/12-sistemas.qmd
-    #     - chapters/13-simulacao.qmd
-    #     - chapters/14-estudos-caso.qmd
-    #     - chapters/15-governanca.qmd
+    # Observação: os arquivos originais `chapters/01-introducao.qmd`,
+    # `chapters/02-performance-mineracao.qmd` e `chapters/03-fatores-moderadores.qmd`
+    # foram mantidos no diretório `chapters/` como reservados. Quando quiser,
+    # posso copiar/colar o conteúdo desses arquivos para os novos esqueleto acima.
 
     - summary.qmd
     - references.qmd
@@ -85,8 +78,92 @@ format:
               </div>
             </div>
           </footer>
+      - text: |
+          <!-- Força carregamento final do CSS e regra específica do TOC -->
+          <link rel="stylesheet" href="/styles-clean.css">
+          <style>
+          /* Regra final aplicada no fim do body para garantir prioridade */
+          #TOC ul > li > a.active,
+          #TOC ul > li.active > a,
+          #TOC .active,
+          #TOC li.active > a {
+            font-weight: bold !important;
+            color: #ffffff !important;
+            border-left: 4px solid #d4af37 !important;
+            background: var(--color-teal-dark) !important;
+            background-color: var(--color-teal-dark) !important;
+            border-color: #d4af37 !important;
+            box-shadow: none !important;
+            padding-left: 0.8rem !important;
+            outline: none !important;
+          }
+          </style>
+          <script>
+          // Força estilos inline nos itens ativos do TOC (maior prioridade que qualquer CSS)
+          (function(){
+            function forceTOC() {
+              try {
+                var els = document.querySelectorAll('#TOC .nav-link.active, #TOC li.active > a');
+                els.forEach(function(el){
+                  el.setAttribute('style', 'font-weight: bold !important; color: #ffffff !important; background: var(--color-teal-dark) !important; border-left: 4px solid #d4af37 !important; padding-left: 0.8rem !important; box-shadow: none !important;');
+                });
+              } catch(e){ console.warn('forceTOC error', e); }
+            }
+            if (document.readyState === 'complete' || document.readyState === 'interactive') {
+              setTimeout(forceTOC, 10);
+            } else {
+              document.addEventListener('DOMContentLoaded', function(){ setTimeout(forceTOC, 10); });
+            }
+            // Também reaplica ao clicar em links (quando a TOC muda por JS)
+            document.addEventListener('click', function(){ setTimeout(forceTOC, 50); }, true);
+          })();
+          </script>
+          <script>
+          // Remove linhas e reduz espaçamento em TODOS os itens do TOC via inline styles
+          (function(){
+            function normalizeTOC(){
+              try{
+                var lis = document.querySelectorAll('#TOC ul > li');
+                lis.forEach(function(li){
+                  li.style.borderBottom = '0';
+                  li.style.marginBottom = '0';
+                  li.style.paddingBottom = '0';
+                });
+                var links = document.querySelectorAll('#TOC ul > li > a, #TOC a');
+                links.forEach(function(a){
+                  a.style.paddingTop = '0.18rem';
+                  a.style.paddingBottom = '0.18rem';
+                  a.style.paddingLeft = '0.6rem';
+                  a.style.borderBottom = '0';
+                });
+              }catch(e){console.warn('normalizeTOC error', e)}
+            }
+            if (document.readyState === 'complete' || document.readyState === 'interactive') {
+              setTimeout(normalizeTOC, 10);
+            } else {
+              document.addEventListener('DOMContentLoaded', function(){ setTimeout(normalizeTOC, 10); });
+            }
+            document.addEventListener('click', function(){ setTimeout(normalizeTOC, 50); }, true);
+          })();
+          </script>
     include-in-header:
       - text: |
+          <style>
+          #TOC ul > li > a.active,
+          #TOC ul > li.active > a,
+          #TOC .active,
+          #TOC li.active > a {
+            font-weight: bold !important;
+            color: #d4af37 !important;
+            border-left: 4px solid #d4af37 !important;
+            background: transparent !important;
+            background-color: transparent !important;
+            border-color: #d4af37 !important;
+            box-shadow: none !important;
+            padding-left: 0.8rem !important;
+            outline: none !important;
+          }
+          </style>
           <script>
           document.addEventListener('DOMContentLoaded', function() {
             const header = document.getElementById('quarto-header');
@@ -94,26 +171,24 @@ format:
               header.innerHTML = `
                 <div class="navbar-container">
                   <div class="quarto-navbar-tools quarto-navbar-tools-start">
-                    <button id="sidebar-toggle" title="Ocultar/Mostrar Sidebar" aria-label="Toggle Sidebar"><i class="bi bi-list"></i></button>
-                    <button id="search-toggle" title="Buscar" aria-label="Buscar"><i class="bi bi-search"></i></button>
                     <div class="dropdown" id="format-menu">
                       <button class="dropdown-toggle" title="Opções de formatação" aria-label="Formatação"><i class="bi bi-gear"></i></button>
                       <div class="dropdown-content">
                         <div class="format-option">
                           <label>Fonte</label>
-                          <button data-font="serif">Serif</button>
-                          <button data-font="sans">Sans</button>
+                          <button data-font="serif" class="format-btn">A<span class="font-label">Serif</span></button>
+                          <button data-font="sans" class="format-btn">A<span class="font-label">Sans</span></button>
                         </div>
                         <div class="format-option">
                           <label>Tema</label>
-                          <button data-theme="white">White</button>
-                          <button data-theme="sepia">Sepia</button>
-                          <button data-theme="night">Night</button>
+                          <button data-theme="white" class="format-btn theme-btn">White</button>
+                          <button data-theme="sepia" class="format-btn theme-btn">Sepia</button>
+                          <button data-theme="night" class="format-btn theme-btn">Night</button>
                         </div>
                         <div class="format-option">
                           <label>Espaçamento</label>
-                          <button data-spacing="minus">-</button>
-                          <button data-spacing="plus">+</button>
+                          <button data-spacing="minus" class="format-btn spacing-btn">Spacing -</button>
+                          <button data-spacing="plus" class="format-btn spacing-btn">Spacing +</button>
                         </div>
                       </div>
                     </div>
@@ -127,49 +202,61 @@ format:
                 </div>
               `;
 
-              // Toggle Sidebar
-              document.getElementById('sidebar-toggle')?.addEventListener('click', function() {
-                const sidebar = document.getElementById('quarto-sidebar');
-                const body = document.body;
-                if (sidebar) {
-                  sidebar.style.display = sidebar.style.display === 'none' ? 'block' : 'none';
-                  body.style.paddingLeft = sidebar.style.display === 'none' ? '0' : 'var(--sidebar-width)';
+              // Format Menu Dropdown - com timeout para garantir que elementos existam
+              setTimeout(function() {
+                const formatBtn = document.querySelector('#format-menu .dropdown-toggle');
+                const formatContent = document.querySelector('#format-menu .dropdown-content');
+
+                if (formatBtn && formatContent) {
+                  formatBtn.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    e.stopPropagation();
+                    const isVisible = formatContent.style.display === 'block';
+                    formatContent.style.display = isVisible ? 'none' : 'block';
+                  });
+
+                  document.addEventListener('click', function(e) {
+                    if (!e.target.closest('#format-menu')) {
+                      formatContent.style.display = 'none';
+                    }
+                  });
                 }
-              });
-
-              // Toggle Search
-              document.getElementById('search-toggle')?.addEventListener('click', function() {
-                const searchInput = document.getElementById('quarto-search-text');
-                if (searchInput) searchInput.focus();
-              });
-
-              // Format Menu Dropdown
-              const formatBtn = document.querySelector('#format-menu .dropdown-toggle');
-              const formatContent = document.querySelector('#format-menu .dropdown-content');
-              formatBtn?.addEventListener('click', function(e) {
-                e.stopPropagation();
-                formatContent.style.display = formatContent.style.display === 'block' ? 'none' : 'block';
-              });
-
-              document.addEventListener('click', function() {
-                if (formatContent) formatContent.style.display = 'none';
-              });
+              }, 100);
 
               // Font change
               document.querySelectorAll('[data-font]').forEach(btn => {
                 btn.addEventListener('click', function() {
+                  document.querySelectorAll('[data-font]').forEach(b => b.classList.remove('active'));
+                  this.classList.add('active');
                   document.body.style.fontFamily = this.dataset.font === 'serif' ?
                     "'Times New Roman', Times, serif" :
                     "Arial, Helvetica, sans-serif";
                 });
               });
 
-              // Theme change
+              // Theme change with sidebar and TOC
               document.querySelectorAll('[data-theme]').forEach(btn => {
                 btn.addEventListener('click', function() {
+                  document.querySelectorAll('[data-theme]').forEach(b => b.classList.remove('active'));
+                  this.classList.add('active');
+
                   const theme = this.dataset.theme;
+                  const sidebar = document.getElementById('quarto-sidebar');
+                  const toc = document.getElementById('quarto-margin-sidebar');
+
                   document.body.classList.remove('theme-white', 'theme-sepia', 'theme-night');
                   document.body.classList.add('theme-' + theme);
+
+                  if (theme === 'night') {
+                    if (sidebar) sidebar.style.background = '#1e1e1e';
+                    if (toc) toc.style.background = '#2d2d2d';
+                  } else if (theme === 'sepia') {
+                    if (sidebar) sidebar.style.background = '#5b4636';
+                    if (toc) toc.style.background = '#e8dcc8';
+                  } else {
+                    if (sidebar) sidebar.style.background = '';
+                    if (toc) toc.style.background = '';
+                  }
                 });
               });
 
